--- a/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
+++ b/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
@@ -13,6 +13,11 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            </NavLink>
+        </div>
 
         @*  EXAMPLE       
     <div class="nav-item px-3">
