Server side communication

--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using ReportHub.Web
 @using ReportHub.Web.Components
+@using ReportHub.Web.Services.Client
+@using ReportHub.Web.Models.Clients.DTOs
