--- a/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
+++ b/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
@@ -14,18 +14,10 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="clients">
+                <span aria-hidden="true"></span> Clients
             </NavLink>
         </div>
-
-        @*  EXAMPLE       
-    <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div> *@
-
     </nav>
 </div>
 
