--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using ReportHub.Web.Components
 @using ReportHub.Web.Services.Client
 @using ReportHub.Web.Models.Clients.DTOs
+@using ReportHub.Web.Components.Shared
