--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
@@ -37,7 +37,7 @@ else
                             <td class="border px-4 py-2">
                                 <button class="text-blue-600 hover:underline bg-transparent border-0 p-0"
                                         @onclick="() => NavigateToDetails(client)">
-                                    @client.Name
+                                    Details
                                 </button>
                             </td>
                         </tr>
