Items of client

--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
@@ -35,7 +35,7 @@ else
                             <td class="border px-4 py-2">@client.Name</td>
                             <td class="border px-4 py-2">@client.Specialization</td>
                             <td class="border px-4 py-2">
-                                <button class="text-blue-600 hover:underline bg-transparent border-0 p-0"
+                                <button class="btn btn-primary"
                                         @onclick="() => NavigateToDetails(client)">
                                     Details
                                 </button>
