--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using ReportHub.Web.Services.Client
 @using ReportHub.Web.Models.Clients.DTOs
 @using ReportHub.Web.Components.Shared
+@using ReportHub.Web.Models.Items.DTOs
