--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
@@ -24,8 +24,8 @@ else
             <p class="card-text">@client.Specialization</p>
         </div>
 
-        @* ACCORDION ADDITIONAL INFO *@
         <div class="accordion">
+            @* ITEMS *@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button @(!isItemsOpen ? "collapsed" : "")"
