--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
@@ -87,7 +87,7 @@ else
     private int _page = 1;
     private int _pageSize = 10;
 
-    private string _sortBy = nameof(ClientForGettingDto.Name);
+    private string _sortBy = nameof(ClientForGettingDto.Id);
     private bool _ascending = true;
 
     protected override async Task OnInitializedAsync()
