Plans of client server side call only

--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
@@ -1,4 +1,5 @@
 ﻿@page "/client-details"
+@using ReportHub.Web.Models.Items
 @inject SelectedClientState SelectedClientState
 @inject IClientService ClientService
 @rendermode InteractiveServer
