--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using ReportHub.Web.Components
 @using ReportHub.Web.Services.Client
 @using ReportHub.Web.Components.Shared
+@using ReportHub.Web.Models.Items
+@using ReportHub.Web.Models.Plans
