--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using ReportHub.Web.Components.Shared
 @using ReportHub.Web.Models.Items
 @using ReportHub.Web.Models.Plans
+@using ReportHub.Web.Models.Sales
