--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using ReportHub.Web.Models.Items
 @using ReportHub.Web.Models.Plans
 @using ReportHub.Web.Models.Sales
+@using ReportHub.Web.Services.Plan
